--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "workflow",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/webpack/bin/webpack.js -p --progress && node server.js",
+    "start": "node server.js",
     "dev": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production"
   },
