--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "express": "^4.17.1",
+    "path": "^0.12.7",
     "react": "^16.5.2",
     "react-addons-update": "^15.6.2",
     "react-dnd": "^9.4.0",
